<resources>
    <string name="app_name">ReserBuddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reservas">Reservas</string>
    <string name="tareas">Tareas</string>
    <string name="notificaciones">Notificaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nueva_reserva">Nueva reserva</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="tel_fono">Teléfono</string>
    <string name="n_comensales">Nº comensales</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="hh_mm">hh:mm</string>
    <string name="salon_o_terraza">Salon o Terraza</string>
    <string name="enviar">Enviar</string>
    <string name="comentario">Comentario</string>
    <string name="crear">Crear</string>
    <string name="crear_reserva">Crear Reserva</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="periodo">Periodo</string>
    <string name="hoy">Hoy</string>
    <string name="crear_tarea">Crear Tarea</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="asignar_usuario">Asignar usuario</string>
    <string name="quitar">Quitar</string>
    <string name="asignar">Asignar</string>
    <string name="clientes">Clientes</string>
    <string name="lista_de_la_compra">Lista de la compra</string>
    <string name="home">Home</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="todas">Todas</string>
    <string name="pendientes">Pendientes</string>
    <string name="completadas">Completadas</string>
    <string name="sin_asignar">Sin asignar</string>
    <string name="comprado">Comprado</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="prefs_file">com.example.reserbuddy.PREFERENCE_FILE_KEY</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="login">Login</string>
    <string name="repite_contrase_a">Repite contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="telefono">Telefono:</string>
    <string name="usuarios">Usuarios</string>
    <string name="categoria">Categoria</string>
    <string name="nombre_cliente">Nombre cliente</string>
    <string name="producto">Producto</string>
    <string name="no_hay_productos">No hay productos</string>
    <string name="nombre_tarea">Nombre tarea</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="seleciona_la_categoria">Seleciona la Categoria</string>
    <string name="estado_tareas">Estado tareas</string>
    <string name="comentarios">Comentarios:</string>
    <string name="sin_comentarios">Sin comentarios</string>
    <string name="aplicar_cambios">Aplicar cambios</string>
    <string name="editar">Editar</string>
    <string name="editar_reserva">Editar reserva</string>
    <string name="confirmar">Confirmar</string>
    <string name="fecha_completada">Fecha completada:</string>
    <string name="actualizar_cliente">Actualizar cliente</string>
    <string name="inicia_con_google">Inicia con google</string>
    <string name="lista_reservas">Lista reservas</string>
    <string name="no_hay_tareas">No hay tareas</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="rol">Rol</string>
    <string name="actualizar_usuario">Actualizar usuario</string>
    <string name="registrate">Registrate</string>

</resources>