<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.reserbuddy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_reservas"
        android:name="com.example.reserbuddy.ui.reservas.ReservasFragment"
        android:label="@string/reservas"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/navigation_tareas"
        android:name="com.example.reserbuddy.ui.tareas.TareasFragment"
        android:label="@string/tareas"
        tools:layout="@layout/fragment_tareas" />

    <fragment
        android:id="@+id/navigation_usuarios"
        android:name="com.example.reserbuddy.ui.usuarios.UsuariosFragment"
        android:label="@string/usuarios"
        tools:layout="@layout/fragment_usuarios" />

    <fragment
        android:id="@+id/navigation_clientes"
        android:name="com.example.reserbuddy.ui.clientes.ClientesFragment"
        android:label="Clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/navigation_detalle_cliente"
        android:name="com.example.reserbuddy.ui.clientes.DetalleClienteFragment"
        android:label="Detalle Cliente"
        tools:layout="@layout/fragment_detalle_cliente" />

    <fragment
        android:id="@+id/navigation_lista_compra"
        android:name="com.example.reserbuddy.ui.listaCompra.ListaCompraFragment"
        android:label="Lista Compra"
        tools:layout="@layout/fragment_lista_compra" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.example.reserbuddy.ui.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->

</navigation>