<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.reservas.ReservasFragment">

    <LinearLayout
        android:id="@+id/linearCabecera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/btnHoy"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/hoy"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSemana"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/semana"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnMes"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/mes"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnPeriodo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/periodo"
            android:textColor="@color/white" />


    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerReservas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>