<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.ReserBuddy"
    tools:context=".ui.newTarea.NewTareaFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nueva_tarea"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombreTarea"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="Nombre tarea"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:paddingStart="10dp"
        android:textSize="20sp" />



    <EditText
        android:id="@+id/etComentario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/comentario"
        android:inputType="textCapSentences"
        android:paddingStart="10dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/sp_usuarios"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="5dp"
        android:textSize="50sp"
        android:prompt="@string/asignar_usuario"/>

    <Button
        android:id="@+id/btn_crearTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:padding="12dp"
        android:text="@string/crear_tarea"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>