<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.clientes.DetalleClienteFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_detalle_cliente"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_usuario"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:id="@+id/tv_detalle_cliente_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_detalle_cliente_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_detalle_cliente_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textSize="15sp"/>


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comentarios:"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="20dp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/grey_rectangle_comic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <TextView
                android:id="@+id/tv_detalle_cliente_coment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Comentarios"
                android:textSize="15sp"/>

        </LinearLayout>

    </FrameLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart_cliente"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        />









</LinearLayout>