<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.usuarios.DetalleUsuarioFragment">


    <LinearLayout
        android:id="@+id/bloqueDetalleUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/chart_green_rectangle"
        android:clickable="true"
        android:orientation="vertical"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_detalle_usuario"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_usuario" />

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detalle_usuario_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detalle_usuario_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detalle_usuario_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true">

                <ImageButton
                    android:id="@+id/ivEditarUs"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_puntos"
                    android:scaleType="fitCenter"
                    android:foreground="@drawable/button_selector"
                    android:focusableInTouchMode="true" />

            </LinearLayout>




        </LinearLayout>


        <LinearLayout
            android:id="@+id/expandible_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:background="#88888888" />


            <TextView
                android:id="@+id/tvComentarioUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sin_comentarios"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#88888888" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Estadistica tareas"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart_usuario"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="@drawable/chart_green_rectangle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="#88888888" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lista tareas"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTareas2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:padding="20dp" />


</LinearLayout>